<resources>
    <string name="app_name">F</string>
    <string name="contacts">Contacts</string>
    <string name="contact_2">Contact 2</string>
    <string name="contact_1">Contact 1</string>
    <string name="contact_4">Contact 4</string>
    <string name="contact_3">Contact 3</string>
    <string name="contact_5">Contact 5</string>
    <string name="contact_6">Contact 6</string>
    <string name="todo">TODO</string>

</resources>
