<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gaurav.l6.MainActivity">

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="368dp"
        android:layout_height="495dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="34dp"
            android:layout_marginTop="80dp"
            app:srcCompat="@mipmap/ic_launcher" android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/b1"
            android:layout_below="@+id/b1"
            android:layout_marginTop="46dp"
            app:srcCompat="@mipmap/ic_launcher" android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/b5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/b3"
            android:layout_below="@+id/b3"
            android:layout_marginTop="49dp"
            app:srcCompat="@mipmap/ic_launcher" android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/b1"
            android:layout_marginEnd="26dp"
            app:srcCompat="@mipmap/ic_launcher" android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/b4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/b2"
            android:layout_alignTop="@+id/b3"
            android:contentDescription="@string/todo"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageButton
            android:id="@+id/b6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/b4"
            android:layout_alignTop="@+id/b5"
            app:srcCompat="@mipmap/ic_launcher" android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/b2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="14dp"
            android:text="@string/contacts"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/b1"
            android:layout_below="@+id/b1"
            android:layout_marginStart="18dp"
            android:text="@string/contact_1" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/b2"
            android:layout_below="@+id/b2"
            android:layout_marginStart="15dp"
            android:text="@string/contact_2" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/t1"
            android:layout_below="@+id/b3"
            android:text="@string/contact_3" />

        <TextView
            android:id="@+id/t4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/t2"
            android:layout_below="@+id/b4"
            android:text="@string/contact_4" />

        <TextView
            android:id="@+id/t5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/t3"
            android:layout_below="@+id/b5"
            android:text="@string/contact_5" />

        <TextView
            android:id="@+id/t6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/t4"
            android:layout_below="@+id/b6"
            android:text="@string/contact_6" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/t5"
            android:layout_centerHorizontal="true"
            android:text="ADD" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/b5"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
